syntax = "proto3";

package pb.protobuf;
option go_package = "pb/protobuf";

import "request.proto";
import "response.proto";

service AuthService {
    rpc SignIn(pb.protobuf.common.Request) returns (pb.protobuf.common.Response) {}
    rpc SignUp(pb.protobuf.common.Request) returns (pb.protobuf.common.Response) {}
    rpc Logout(pb.protobuf.common.Request) returns (pb.protobuf.common.Response) {}
}

